# viam-camera-realsense

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  codecov.yml  conanfile.py  main.cpp  meta.json
.github/workflows/: appimage-tag.yml  build-publish.yml  docker.yml  module-tgz.yml  test.yml
cmake/: simd_flags.cmake
etc/: Dockerfile.cuda.debian.bookworm  Dockerfile.debian.bookworm
etc/conan/: README.md  arm64-profile  librealsense_arm64_toolchain.cmake
packaging/appimages/: viam-camera-realsense-aarch64.yml  viam-camera-realsense-cli-x86_64.yml  viam-camera-realsense-x86_64.yml  viam-camera-realsense2-x86_64.yml
src/: camera_realsense.cpp  camera_realsense.hpp  encoding.hpp  version_helpers.hpp
src/cli/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  main.cpp
src/module/: device.cpp  device.hpp  device_impl.hpp  device_update_fw.cpp  discovery.hpp  download_utils.cpp  download_utils.hpp  encoding.cpp  encoding.hpp  extrinsics.hpp  firmware_update.cpp  firmware_update.hpp  main.cpp  profiler.hpp  realsense.cpp  realsense.hpp  sensors.hpp  time.hpp  utils.hpp  zip_utils.cpp  zip_utils.hpp
test/: CMakeLists.txt  camera_realsense_test.cpp  device_tests.cpp  discovery_tests.cpp  encoding_tests.cpp  extrinsics_test.cpp  log_capture.hpp  realsense_tests.cpp  sensors_tests.cpp  time_tests.cpp  utils_tests.cpp  zip_utils_tests.cpp
test2/: CMakeLists.txt  encoding_tests.cpp  time_tests.cpp
